--- a/Дз_1/01_html/additional.html
+++ b/Дз_1/01_html/additional.html
@@ -6,15 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Заголовок первого уровня</h1>
+    <h1 align="center">Заголовок первого уровня</h1>
     <h3>Предварительно форматированный текст:</h3>
-
-    
-<p width="50">x | o | <br>
-‐‐‐‐‐‐‐‐‐‐‐ <br>
-<span align="center">| х | <br></span>
-‐‐‐‐‐‐‐‐‐‐‐ <br>
-o | x | o </p>
+    <pre>
+  x | o |
+  ‐‐‐‐‐‐‐‐‐‐‐
+    | х |
+  ‐‐‐‐‐‐‐‐‐‐‐
+  o | x | o
+    </pre>
 
 <hr>
 <h3>Тег address</h3>
@@ -25,11 +25,11 @@ o | x | o </p>
 <h3>Семантические и функциональные строчные теги</h3>
 <p>Пожелания автора: <br>
 <font color="red"><s>Данный текст убрать из монографии</s></font>
-  и заменить его на <u><font color="blue">вновь помещённый текст</font></u>.</p>
+  и заменить его на <font color="blue"><u>вновь помещённый текст</u></font>.</p>
   <h3>Работа со строчными и блоковыми цитатами</h3>
   <p>Цитата короткая: <br>
 <em>И всё­&#8211таки она вертится!</em> <br><br>
-Цитата занимающая несколько предложений: <br>
+Цитата занимающая несколько предложений: <br> <br>
 &nbsp;  &nbsp;  &nbsp;  &nbsp; О сколько нам открытий чудных<br>
 &nbsp;  &nbsp;  &nbsp;  &nbsp; Готовят просвещенья дух <br>
 &nbsp;  &nbsp;  &nbsp;  &nbsp; И опыт, сын ошибок трудных, <br>
@@ -39,15 +39,15 @@ o | x | o </p>
 
 <h3>Семантические и функциональные строчные теги</h3>
 
-<p>Тэг <strong>&lt;STRONG&gt; делает данный фрагмент текста более важным.</strong> <em>Тэг &lt;em&gt; менее важным.</em> 
+<strong><p>Тэг &lt;STRONG&gt; делает данный фрагмент текста более важным.</strong> <em>Тэг &lt;em&gt; менее важным.</em> 
 В то время как теги &lt; b&gt;  и &lt; i&gt;  делают текст просто <strong>полужирным</strong> и <em>курсивом</em> соответственно.</p>
 <hr>
 
 <h3>Теги форматирования машинного языка</h3>
 <p>При выполнении программного кода на языке PERL:</p>
-<kbd>#!/usr/local/bin/perl <br>
+<code>#!/usr/local/bin/perl <br>
 print "Content‐type: text/html\n\n"; <br>
-print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";</kbd>
+print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";</code>
 
 <p>Программа выведет:</p>
 <tt>Hello, World!</tt>
@@ -58,32 +58,37 @@ print "&lt;H1&gt;Hello World&lt;/H1&gt;\n";</kbd>
 <hr>
 
 <h3>Комментарии и литералы(мнемоники) в HTML</h3>
-<kbd>&lt;!‐‐ это комментарий ‐‐&gt; <br>    
+<code>&lt;!‐‐ это комментарий ‐‐&gt; <br>    
 &nbsp;  &nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;&lt;!‐‐ и это также комментарий, <br>
-&nbsp;  &nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;занимающий более одной строки ‐‐&gt; </kbd>
+&nbsp;  &nbsp;&nbsp;  &nbsp;  &nbsp;  &nbsp;занимающий более одной строки ‐‐&gt; </code>
 
 
 <hr>
  <h3>Теги над­ и подстрочных символов</h3>
  <h4 align="center">Магазин работает:</h4>
 
- <p align="center">c 08<sup><u>30</u></sup>до 18 <sup><u>30</u></sup>
+ <p align="center">c 08<sup><u>30</u></sup>до 18<sup><u>30</u></sup>
 <br>
-обед с 13 <sup><u>00</u></sup> до 14 <sup><u>00</u></sup><br>
+обед с 13<sup><u>00</u></sup> до 14<sup><u>00</u></sup><br>
 выходной: <u>суббота</u>, <u>воскресенье</u></p>
 <hr>
-<h3>Вот такой текст</h3>
+<h3>Вот такой текст <br> <br>
 <b><sup>Э</sup><sub>т</sub><sup>о</sup> <sub>п</sub><sup>р</sup><sub>о</sub><sup>с</sup><sub>т</sub><sup>о</sup> <sub>в</sub><sup>е</sup><sub>с</sub><sup>ё</sup><sub>л</sub><sup>ы</sup><sub>й</sub> <sup>т</sup><sub>е</sub><sup>к</sup><sub>с</sub><sup>т</sup>
+</h3>
 </b>
 <hr>
 <h3>Акроним и курсив</h3>
 
-ТФ: Y(x)=e <sup>­iπx</sup> +log <sub>x</sub>4
+ТФ: Y(<em>x</em>)=e <em><sup>-­i<acronym title="­Математическая постоянная, равная отношению длины окружности к её диаметру">π</acronym>x</sup></em> +log em<sub>x</sub></em>4
+<!-- Не знала, куда вставить Акроним, добавила для пи --!>
 <hr>
 <h3>Тег small внтури абзаца</h3>
-<p align="right">Создано при помощи блокнота &copy;</p>
+<p align="right"><small>Создано при помощи блокнота &copy;</small></p>
 
 
     
 </body>
 </html>
+
+
+
