--- a/Дз_1/03_links/additional/site.by/catalog/s-s.html
+++ b/Дз_1/03_links/additional/site.by/catalog/s-s.html
@@ -52,5 +52,71 @@
              
         </ul>
         <br>
+        <h2>Меню таблица с вложенными таблицами</h2>
+        <table>
+            <tr>
+                <td>
+                    <a href="../index.html">Главная</a>
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="../news/news.html">Новости</a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="../catalog.html">Каталог</a>
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="../catalog/a-w.html">Осень-Зима</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="../catalog/s-s.html">Весна-Лето</a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="../promo.html">Акции</a>
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="../promo/last.html">Актуальные</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="../promo/old.html">Прошедшие</a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="../about.html">О нас</a>
+                    <table>
+                        <tr>
+                            <td>
+                                <a href="../about/contacts.html">Контакты</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="../about/scheme.html">Проезд</a>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table> 
 </body>
 </html>
