--- a/Дз_1/04_multimedia/base/index.html
+++ b/Дз_1/04_multimedia/base/index.html
@@ -8,7 +8,7 @@
 </HEAD>
 
 <body>   
-    <img src="Icon-Python.7bb116a5.png" alt="icon_Python" align="right"> 
+    <img src="Icon-Python.7bb116a5.png" alt="Logo Python" title="Логотип" align="right"> 
     <h1 align="justify" <STRONG> HOW-TO: Программа на Python, Часть 1</STRONG> </h1>
     <ul>
         <li> <a href="Часть_1.html" target="_blank"><em> Программа на Python &mdash; часть 1</em></a> </li>
@@ -87,9 +87,9 @@
     <br><br><br>
     <table width="100%">
         <tr>
-            <th align="left"><img src="back.png"></th>
-            <th align="center"><img src="menu.png"></th>
-            <th align="right"><img src="forward.png"></th>
+            <th align="left"><a href=""><img src="back.png" alt="left_arrow" title="Предыдущая страница"></a></th>
+            <th align="center"><a href="#contents"><img src="menu.png" alt="home_icon" title="К содержанию"></a></th>
+            <th align="right"><a href=""><img src="forward.png" alt="right_arrow" title="Следующая страница"></a></th>
         </tr>
     </table>
     
