--- a/Дз_1/05_HTML_forms/base.html
+++ b/Дз_1/05_HTML_forms/base.html
@@ -156,7 +156,7 @@
                 <form action="http://fe.it-academy.by/TestForm.php" method="post">
                     <fieldset>
                         <legend>Строка поиска</legend>
-                        <input type="text" name="search" placeholder="Только русские буквы" pattern="[А-Яа-яA-Z]+"> <br>                  
+                        <input type="text" name="search" placeholder="Только русские буквы" pattern="[А-Яа-я]+"> <br>                  
                         <input type="text" name="phoneNumber"  pattern="^(\+375|80)(29|25|44|33)(\d{3})(\d{2})(\d{2})$" placeholder="+375291234567"> <br> 
                         <input type="submit" value="Проверить" >
                     </fieldset>
