--- a/Дз_1/02_css/base_01.html
+++ b/Дз_1/02_css/base_01.html
@@ -1,11 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .one {
+            height: 188px;
+            width: 143px;
+            background-image: url(cards.7e0a18f0.png);
+            background-repeat: no-repeat;
+            background-position: 0px -200px;
+            float: left;
+            
+        }
+        .two{
+            height: 188px;
+            width: 143px;
+            background-image: url(cards.7e0a18f0.png);
+            background-repeat: no-repeat;
+            background-position: 0px -800px;
+            float: left;
+            margin-top: 0px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            margin-left: 0px;
+        }
+        .three{
+            height: 188px;
+            width: 143px;
+            background-image: url(cards.7e0a18f0.png);
+            background-repeat: no-repeat;
+        }
+        .four{
+            height: 188px;
+            width: 143px;
+            background-image: url(cards.7e0a18f0.png);
+            background-repeat: no-repeat;
+        }
+        .five{
+            height: 188px;
+            width: 143px;
+            background-image: url(cards.7e0a18f0.png);
+            background-repeat: no-repeat;
+        }
+    </style>
 </head>
+
 <body>
-    
+    <div class="one"></div>
+    <div class="two"></div>
+    <div class="three"></div>
+    <div class="four"></div>
+    <div class="five"></div>
 </body>
+
 </html>
