--- a/Дз_1/02_css/base_01.html
+++ b/Дз_1/02_css/base_01.html
@@ -22,28 +22,47 @@
             background-repeat: no-repeat;
             background-position: 0px -800px;
             float: left;
-            margin-top: 0px;
+            margin-top: 61px;
             margin-right: 0px;
             margin-bottom: 0px;
-            margin-left: 0px;
+            margin-left: -61px;
         }
         .three{
             height: 188px;
             width: 143px;
             background-image: url(cards.7e0a18f0.png);
             background-repeat: no-repeat;
+            background-position: 0px -1792px;
+            float: left;
+            margin-top: 121px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            margin-left: -67px;
         }
         .four{
             height: 188px;
             width: 143px;
             background-image: url(cards.7e0a18f0.png);
             background-repeat: no-repeat;
+            background-position: -4px -1395px;
+            float: left;
+            margin-top: 182px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            margin-left: -67px;
         }
         .five{
             height: 188px;
             width: 143px;
             background-image: url(cards.7e0a18f0.png);
             background-repeat: no-repeat;
+            background-position: 0px -2390px;
+            float: left;
+            margin-top: 255px;
+            margin-right: 0px;
+            margin-bottom: 0px;
+            margin-left: -67px;
+
         }
     </style>
 </head>
