--- a/home/02_css/base_02.html
+++ b/home/02_css/base_02.html
@@ -7,17 +7,15 @@
     <style>
         
         .list{
-            width: 350px;
+            width: 500px;
         }
-        ul {
+        .title{
             list-style: upper-roman;
             font-weight: bold;
             
         }
-        li{
+        .subtitle{
             list-style-type: lower-roman;
-        }
-        ul.subtitle li{
             font-weight: normal;
         }
         .text{
@@ -39,7 +37,7 @@
                 <li>Цвет фона: черный</li>
                 <li>Цвет текста: зеленый</li>
                 <li>Ширина: 400px</li>
-                <li>Максимаьная высота Контейнера: 4-е строки</li>
+                <li>Максимаьная высота контейнера: 4-е строки</li>
                 <li>Переполнение: автоматическое</li>
             </ul>
         </li>
