--- a/home/03_css/base+add.html
+++ b/home/03_css/base+add.html
@@ -4,41 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week Days</title>
     <style>
-        div.MenuLevel1 { width: 700px;}
+        div.MenuLevel1 {width: 700px;}
         div.MenuLevel1 > div {float: left; background-color:rgb(156, 151, 151); border: solid rgb(73, 73, 76) 1px; position: relative; cursor: pointer; width: 100px}
-    div.MenuLevel2 { width: 150px; display: none }
-    div.MenuLevel2 > div { background-color: rgb(201, 199, 199); border: solid rgb(142, 142, 146) 1px; cursor: pointer }
-    div.MenuLevel1 > div:hover div.MenuLevel2 { display: block; position: absolute; left: 80%; top: 90%; z-index: 1 }
+        div.MenuLevel2 { width: 100px; display: none }
+        div.MenuLevel2 > div { background-color: rgb(201, 199, 199); border: solid rgb(142, 142, 146) 1px; cursor: pointer; 
+        transition-property: display; 
+        transition-duration: 2s;
+        transition-timing-function: linear;
+        transition-delay: 1s; 
+    }
+    
+        div.MenuLevel1 > div:hover div.MenuLevel2 { display: block; position: absolute; left: 0%; top: 100%; z-index: 1 }
 
-    @media all and (max-width: 700px){
+    @media all and (max-width: 650px){
 
         div.MenuLevel1 { width: 400px;}
         div.MenuLevel1 > div { float: left; background-color:rgb(156, 151, 151); border: solid rgb(73, 73, 76) 1px; position: relative; cursor: pointer; width: 100px; transition-property: all; transition-duration: 2s;}
-    div.MenuLevel2 { width: 150px; display: none }
-    div.MenuLevel2 > div { background-color: rgb(156, 151, 151); border: solid rgb(73, 73, 76) 1px; cursor: pointer; transition-delay: 1s; transition-property: all; transition-duration: 2s;}
+    div.MenuLevel2 { width: 100px; display: none }
+    div.MenuLevel2 > div { background-color: rgb(201, 199, 199); border: solid rgb(73, 73, 76) 1px; cursor: pointer; transition-delay: 1s; transition-property: all; transition-duration: 2s;}
     div.MenuLevel1 > div:hover div.MenuLevel2 { display: block; position: absolute; left: 80%; top: 90%; z-index: 1 }
     }
 
-    @media all and (max-width: 600px){
+    @media all and (max-width: 400px){
 
         div.MenuLevel1 { width: 100px;}
         div.MenuLevel1 > div {background-color:rgb(156, 151, 151); border: solid rgb(73, 73, 76) 1px; position: relative; cursor: pointer; width: 100px}
-    div.MenuLevel2 { width: 150px; display: none }
+    div.MenuLevel2 { width: 100px; display: none }
     div.MenuLevel2 > div { background-color: rgb(201, 199, 199); border: solid rgb(142, 142, 146) 1px; cursor: pointer }
-    div.MenuLevel1 > div:hover div.MenuLevel2 { display: block; position: absolute; left: 80%; top: 90%; z-index: 1 }
+    div.MenuLevel1 > div:hover div.MenuLevel2 { display: block; position: absolute; left: 100%; top: 0%; z-index: 1 }
 
 }
-
-
-
-
-
-
 </style>
 </head>
-
+<!--Не понимаю, на какое свойство нужно вешать transition и почему я не смогла оставить этот комментарий в хэде?-->
 <div class='MenuLevel1'>
     <div>Понедельник</div>
     <div>
@@ -51,11 +51,10 @@
     </div>
     <div>
         Среда
-        
-    </div>
+     </div>
     <div>Четверг</div>
-        <div>Пятница</div>
-        <div>Суббота</div>
+    <div>Пятница</div>
+    <div>Суббота</div>
 
 </div>
     </body>
